# cli-switch

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  PRD.md  README.md  TDD.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  semantic-release.yml
docs/: README_CN.md
migrations/: 001_init.sql
scripts/: analyze-next-version.mjs  bump-version.mjs  bundle-macos-app.sh  bundle-windows-app.ps1
src/: app.rs  autostart.rs  desktop.rs  events.rs  lib.rs  log_files.rs  logging.rs  main.rs  proxy.rs  server.rs  storage.rs  update.rs
src/proxy/: stream.rs
src/server/: error.rs  state.rs  tasks.rs  ui.rs
src/server/handlers/: channel.rs  health.rs  maintenance.rs  mod.rs  pricing.rs  proxy.rs  route.rs  settings.rs  stats.rs  update.rs  usage.rs
src/storage/: channel.rs  channel_endpoint.rs  channel_key.rs  endpoint_key.rs  mod.rs  pricing.rs  protocol.rs  route.rs  settings.rs  stats.rs  usage.rs
tests/: proxy_failover.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  lib.ts  main.tsx  styles.css
ui/src/components/: ItemListEditor.tsx  ui.tsx
ui/src/components/ui/: badge.tsx  button.tsx  calendar.tsx  date-range-picker.tsx  dialog.tsx  index.ts  table.tsx  tabs.tsx  textarea.tsx
ui/src/lib/: cliswitchEvents.ts  currency.tsx  error.ts  i18n.tsx  logger.ts  theme.ts  updateReadyPrompt.ts  useWindowEvent.ts
ui/src/locales/: en-US.json  zh-CN.json
ui/src/pages/: ChannelsPage.tsx  DashboardPage.tsx  LogsPage.tsx  MonitorPage.tsx  OverviewPage.tsx  PricingPage.tsx  RoutesPage.tsx  SettingsMaintenancePage.tsx  SettingsPage.tsx
