[package]
name = "cliswitch"
version = "0.1.1"
edition = "2024"

[features]
default = ["desktop"]
embed-ui = ["dep:rust-embed"]
desktop = ["dep:tao", "dep:wry", "dep:muda", "dep:tray-icon", "embed-ui"]

[dependencies]
anyhow = "1"
axum = "0.8.7"
bytes = "1"
clap = { version = "4", features = ["derive"] }
directories = "6"
futures-util = "0.3"
http = "1"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled"] }
rust-embed = { version = "8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = { version = "0.34", optional = true }
thiserror = "2"
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
wry = { version = "0.53", optional = true }
muda = { version = "0.17", optional = true }
tray-icon = { version = "0.21", optional = true }
